--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,20 +4,19 @@
     <tr>
       <td>
         <%= link_to "←", user_path(params: {id: @user.id, first_day: @first_day.prev_month }),
-                         class: "btn btn-xs btn-primary" %>
+                           class: "btn btn-xs btn-primary" %>
         &emsp;<%= @first_day.to_s(:year_month) %>　時間管理表&emsp;
         <%= link_to "→", user_path(params: {id: @user.id, first_day: @first_day.next_month }),
-                         class: "btn btn-xs btn-primary" %>
+                           class: "btn btn-xs btn-primary" %>
       </td>
       <td>指定勤務時間　<%= format_basic_time(@user.work_time) %></td>
       <td>基本時間　<%= format_basic_time(@user.basic_time) %></td>
       <td>初日　<%= @first_day.to_s(:date) %></td>
     </tr>
-
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
-      <td>出勤日数</td>
+      <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締日　<%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
@@ -40,29 +39,43 @@
         <th></th>
       </tr>
     </thead>
-  <!--!注意！この位置に</table>タグがあるはずです、削除してください-->  
-<!--!注意！この位置に</div>タグがあるはずです、これも削除してください-->
-
-<!--↓↓↓ここから先が今回記述するコード↓↓↓-->
     <tbody>
-      <% (@first_day..@last_day).each do |day| %>
-        <tr>
-          <td><%= day.to_s(:date) %></td>
-          <td><%= %w{日 月 火 水 木 金 土}[day.wday] %></td>
-          <td></td>
-          <td></td>
-          <td>
-            <% if day.worked_on == Date.today && day.started_at.nil? %>
-              <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
-            <% end %>
-          </td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      <% end %>
+    <% @dates.each do |day| %>
+      <tr>
+        <td><%= day.worked_on.to_s(:date) %></td>
+        <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+        <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
+        <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+        <td>
+          <% if day.worked_on == Date.today && day.started_at.nil? %>
+            <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
+          <% end %>
+        </td>
+        <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
+        <td><%= day.finished_at.to_s(:min) if day.finished_at.present? %></td>
+        <td>
+          <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
+            <%= button_to "退社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
+          <% end %>
+        </td>
+        <td>
+          <% if day.started_at.present? && day.finished_at.present? %>
+            <%= working_times(day.started_at, day.finished_at) %>
+            <% seconds = (day.finished_at - day.started_at).to_i %>
+            <% @total_seconds = @total_seconds.to_i + seconds %>
+          <% end %>
+        </td>
+        <td></td>
+      </tr>
+    <% end %>
     </tbody>
-  </table>
-</div>
+    <tfoot>
+      <tr>
+        <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
+        <td colspan = "6"></td>
+        <td><%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
+        <td></td>
+      </tr>
+      </tfoot>
+    </table>
+  </div>
